--- a/REghZyNBTEditor/REghZyNBTEditor.csproj
+++ b/REghZyNBTEditor/REghZyNBTEditor.csproj
@@ -58,6 +58,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\NBTTypeToIconConverter.cs" />
+    <Compile Include="NBT\Controls\NBTPrimitiveControl.xaml.cs">
+      <DependentUpon>NBTPrimitiveControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NBT\NBTBaseViewModel.cs" />
     <Compile Include="NBT\NBTTagByteArrayViewModel.cs" />
     <Compile Include="NBT\NBTTagCompoundViewModel.cs" />
@@ -87,6 +91,8 @@
     <Compile Include="Utilities\RCSConfig.cs" />
     <Compile Include="Utilities\ScrollViewerHelper.cs" />
     <Compile Include="Utilities\String\StringExtensions.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\NBTTreeItemViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -99,6 +105,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NBT\Controls\NBTPrimitiveControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -126,8 +136,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NBT\Controls" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
