--- a/REghZyNBTEditor/REghZyNBTEditor.csproj
+++ b/REghZyNBTEditor/REghZyNBTEditor.csproj
@@ -38,6 +38,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationFramework.Aero2" />
+    <Reference Include="REghZyMVVM, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\REghZyMVVM\REghZyMVVM\bin\Release\netstandard2.0\REghZyMVVM.dll</HintPath>
+    </Reference>
+    <Reference Include="REghZyMVVM.Utils, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\REghZyMVVM\REghZyMVVM.Utils\bin\Release\netstandard2.0\REghZyMVVM.Utils.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -58,13 +64,31 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\NBTCollectionConverter.cs" />
     <Compile Include="Converters\NBTTypeToResourceLocationConverter.cs" />
     <Compile Include="Converters\PrimitiveNBTValuePreviewConverter.cs" />
+    <Compile Include="NBT\Base\NBTArrayViewModel.cs" />
+    <Compile Include="NBT\Controls\NBTArrayControl.xaml.cs">
+      <DependentUpon>NBTArrayControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NBT\Controls\NBTCompoundControl.xaml.cs">
+      <DependentUpon>NBTCompoundControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NBT\Controls\NBTHeaderControl.xaml.cs">
+      <DependentUpon>NBTHeaderControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NBT\Controls\NBTListControl.xaml.cs">
+      <DependentUpon>NBTListControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NBT\Controls\NBTPrimitiveControl.xaml.cs">
       <DependentUpon>NBTPrimitiveControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NBT\Controls\NBTStringControl.xaml.cs">
+      <DependentUpon>NBTStringControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NBT\NBTBaseViewModel.cs" />
-    <Compile Include="NBT\NBTCollectiveViewModel.cs" />
+    <Compile Include="NBT\Base\NBTCollectiveViewModel.cs" />
+    <Compile Include="NBT\Base\NBTPrimitiveViewModel.cs" />
     <Compile Include="NBT\NBTTagByteArrayViewModel.cs" />
     <Compile Include="NBT\NBTTagCompoundViewModel.cs" />
     <Compile Include="NBT\NBTTagDoubleViewModel.cs" />
@@ -98,14 +122,8 @@
     <Compile Include="Streams\EnumConversion.cs" />
     <Compile Include="Streams\IDataInput.cs" />
     <Compile Include="Streams\IDataOutput.cs" />
-    <Compile Include="Utilities\ArrayUtils.cs" />
-    <Compile Include="Utilities\BaseView.cs" />
-    <Compile Include="Utilities\BaseViewModel.cs" />
-    <Compile Include="Utilities\Command.cs" />
-    <Compile Include="Utilities\CommandParam.cs" />
-    <Compile Include="Utilities\RCSConfig.cs" />
     <Compile Include="Utilities\ScrollViewerHelper.cs" />
-    <Compile Include="Utilities\String\StringExtensions.cs" />
+    <Compile Include="ViewModels\DataPreviewViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\NBTTreeItemViewModel.cs" />
     <Page Include="MainWindow.xaml">
@@ -120,7 +138,27 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NBT\Controls\NBTArrayControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NBT\Controls\NBTCompoundControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NBT\Controls\NBTHeaderControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NBT\Controls\NBTListControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="NBT\Controls\NBTPrimitiveControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NBT\Controls\NBTStringControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -195,5 +233,6 @@
   <ItemGroup>
     <Resource Include="Assets\tagEnd.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
